Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

COMMITERS

Do not forget to update this page on the wiki when making changes relevant to developers:
http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes

29-Mar-2009 Ercan Ozkaya
 ^ Refactored com_checkin
 ^ Converted all parameter fields in sample data to JSON objects

13-Mar-2009 Sam Moffatt
 ^ Renamed files installer from file.php to files.php
 ^ Major updates to installation adapters to conform with styles
 ^ Fixed issue with JFile::read
 ^ Fixed issue with JAdapter failing to find all adapters on an error
 + Added return_bytes utility function
 ^ Fixed up access level for extension table class variables
 ^ Clean up in backup area
 ^ Updated JApplicationHelper::parseXMLInstallFile to handle languages for discovery better
 + Added some extra warnings and functionality to installer component

21-Feb-2009 Sam Moffatt
 # Fixes to install SQL for incorrect client assigned to components

18-Feb-2009 Sam Moffatt
 # Fixed issue with plugin manager loading incorrect language file

16-Feb-2009 Kevin Devine
 ^ upgrade phpmailer library to version 2.3

10-Feb-2009 Sam Moffatt
 # Fixed issue with plugin directories not finding the correct XML file

06-Feb-2009 Charl van Niekerk
 - Removed target="_blank" attributes out of administrator template.

05-Feb-2009 Andrew Eddie
 ! New option now passed to login events: action = core.site.login|core.administrator.login
 ! Root user now bypasses ACS checks
 ! Added rules to support frontend and backend login to installation
 ! Login now working of new ACS checks
 ! And there we have it - access controlled articles

04-Feb-2009 Sam Moffatt
 # Fixed issue with temp and log paths not being displayed in the directory info tabs
 # Fixed issue with list of extensions not working properly
 ^ Installer SQL cleanup
