@@ -8,17 +8,14 @@
   */
 
 // no direct access
-defined( '_JEXEC' ) or die( 'Restricted access' );
+defined('_JEXEC') or die('Restricted access');
 
 if (!JAcl::authorise('core', 'cache.manage')) {
 	JFactory::getApplication()->redirect('index.php', JText::_('ALERTNOTAUTH'));
 }
 
-// Require the base controller
 require_once JPATH_COMPONENT.DS.'controller.php';
 
-$controller	= new CacheController();
-
-// Perform the Request task
+$controller	= JController::getInstance('Cache');
 $controller->execute(JRequest::getCmd('task'));
 $controller->redirect();
