@@ -10,7 +10,7 @@
 // Check to ensure this file is included in Joomla!
 defined('_JEXEC') or die();
 
-jimport( 'joomla.application.component.controller' );
+jimport('joomla.application.component.controller');
 
 /**
  * Cache Controller
@@ -21,19 +21,68 @@ jimport( 'joomla.application.component.controller' );
  */
 class CacheController extends JController
 {
-	function delete()
+	public function display()
+	{
+		// Get the document object.
+		$document	= &JFactory::getDocument();
+
+		// Set the default view name and format from the Request.
+		$vName		= JRequest::getWord('view', 'cache');
+		$vFormat	= $document->getType();
+		$lName		= JRequest::getWord('layout', 'default');
+
+		// Get and render the view.
+		if ($view = &$this->getView($vName, $vFormat))
+		{
+			switch ($vName)
+			{
+				case 'purge':
+					break;
+				case 'cache':
+				default:
+					$model = &$this->getModel($vName);
+					$view->setModel($model, true);
+					break;
+			}
+
+			$view->setLayout($lName);
+
+			// Push document object into the view.
+			$view->assignRef('document', $document);
+
+			$view->display();
+		}
+	}
+	
+	public function delete()
 	{
 		// Check for request forgeries
 		JRequest::checkToken() or jexit(JText::_('JINVALID_TOKEN'));
 
-		$cid = JRequest::getVar( 'cid', array(0), 'post', 'array' );
-
-		$client	=& JApplicationHelper::getClientInfo(JRequest::getVar('client', '0', '', 'int'));
+		$cid = JRequest::getVar('cid', array(), 'post', 'array');
 
 		$model = $this->getModel('cache');
-		$model->setPath($client->path.DS.'cache');
-		$model->cleanlist( $cid );
+		$model->cleanlist($cid);
 
-		$this->display();
+		$this->setRedirect('index.php?option=com_cache');
+	}
+	
+	public function purge()
+	{
+		// Check for request forgeries
+		JRequest::checkToken() or jexit(JText::_('JINVALID_TOKEN'));
+
+		$model = $this->getModel('cache');
+		$ret = $model->clean();
+
+		$msg = JText::_('Expired items have been purged');
+		$msgType = 'message';
+
+		if ($ret === false) {
+			$msg = JText::_('Error puring expired items');
+			$msgType = 'error';
+		}
+
+		$this->setRedirect('index.php?option=com_cache&view=purge', $msg, $msgType);
 	}
 }
